Got rid of bogus first entry, directory htaccess rights

--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,3 +1,9 @@
+<Directory "/Users/danielcapacio/Desktop/COMP4711/">
+    Options Indexes FollowSymLinks ExecCGI Includes
+    AllowOverride All
+    Require all granted
+</Directory>
+
 # Virtual Hosts
 #
 # Required modules: mod_log_config
@@ -7,7 +13,7 @@
 # use only name-based virtual hosts so the server doesn't need to worry about
 # IP addresses. This is indicated by the asterisks in the directives below.
 #
-# Please see the documentation at 
+# Please see the documentation at
 # <URL:http://httpd.apache.org/docs/2.4/vhosts/>
 # for further details before you try to setup virtual hosts.
 #
@@ -21,26 +27,17 @@
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 <VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host.example.com
-    DocumentRoot "/Applications/XAMPP/xamppfiles/docs/dummy-host.example.com"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
-    ErrorLog "logs/dummy-host.example.com-error_log"
-    CustomLog "logs/dummy-host.example.com-access_log" common
-</VirtualHost>
-
-<VirtualHost *:80>
     ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "/Applications/XAMPP/htdocs"
-    ServerName localhost
+    DocumentRoot "/Users/danielcapacio/Desktop/COMP4711/COMP-4711-lab1"
+    ServerName comp4711.local
     ErrorLog "logs/dummy-host2.example.com-error_log"
     CustomLog "logs/dummy-host2.example.com-access_log" common
 </VirtualHost>
 
 <VirtualHost *:80>
     ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "/Users/danielcapacio/Desktop/COMP4711/COMP-4711-lab1"
-    ServerName comp4711.local
+    DocumentRoot "/Applications/XAMPP/htdocs"
+    ServerName localhost
     ErrorLog "logs/dummy-host2.example.com-error_log"
     CustomLog "logs/dummy-host2.example.com-access_log" common
 </VirtualHost>
